# silver

./: .clangd  .gitignore  CMakeLists.txt  Identifiers.cpp  Identifiers.hpp  iter.hpp  lib.hpp  silver.cpp  silver.hpp  syntax.sl  syntax2.sl
codegen/genllvm/: Codegen.hpp
lex/: CMakeLists.txt  Token.cpp  Token.hpp  Tokenise.cpp  Tokenise.hpp
parse/: Ast.hpp  AstPrint.cpp  AstPrint.hpp  Parse.cpp  Parse.hpp
src/: CMakeLists.txt  allocators.cpp  allocators.hpp  ast.cpp  ast.hpp  bytecode.hpp  bytecode_gen.cpp  bytecode_gen.hpp  cdebug.cpp  cdebug.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  token.cpp  token.hpp  typechecker.cpp  typechecker.hpp  typesystem.cpp  typesystem.hpp  utils.cpp  utils.hpp
src/llvmb/: Codegen.hpp  codegen.cpp  llvmScope.hpp
typesys/: TypeCheck.cpp  TypeCheck.hpp  TypeSystem.hpp
